--- a/styles/base.css
+++ b/styles/base.css
@@ -27,57 +27,6 @@ main {
     border-radius: 5px;
 }
 
-#menu {
-    display:block;
-    font-size: 1.5rem;
-	border: 1px solid rgba(0,0,0,.3);
-	padding: .25rem .75rem;
-	background-color: white;
-	color: black;
-	position: absolute;
-	top: 1rem;
-	right: 1rem;
-}
-
-#menu ::before {
-    content: "≡";
-}
-nav {
-    color: white;
-}
-
-.navigation {
-	list-style: none;
-	margin: 0 auto;
-	max-width: 760px;
-}
-
-.navigation li {
-	display: none;
-}
-.navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-	font-size: clamp(1rem, 2vmin, 1.5rem);
-}
-
-.navigation a:hover, navigation a:active {
-	color: white;
-	background-color: black;
-}
-
-.show li {
-	display: block;
-}
-
-#menu.show::before {
-	content: "X";
-}
 
 section.card {
     margin-top: 0%;
@@ -85,30 +34,7 @@ section.card {
     
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    background-color: black;
-    text-align: center;
-    margin-top: 0%;
-    color: white;
 
-}
-
-nav li {
-    margin-bottom: 10px;
-
-}
-
-nav a {
-    text-decoration: none;
-    font-weight: bold;
-    color: rgb(216, 210, 198);
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
 
 h1 {
     font-size: larger;
@@ -152,4 +78,97 @@ footer {
 
 #currentYear {
     font-weight: bold;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+body {
+	font-family: Roboto, sans-serif;
+}
+/* Mobile View ***************/
+#menu {
+	display: block;
+	font-size: 2rem;
+	font-weight:700;
+	text-decoration: none;
+	padding: .5rem .75rem;
+	background-color: #eee;
+	color: #000;
+}
+
+#menu::before {
+	content: "≡";
+}
+
+nav {
+	background-color: rgb(37, 46, 61);
+}
+.navigation {
+	list-style: none;
+	margin: 0 auto;
+	max-width: 760px;
+}
+
+.navigation li {
+	display: none;
+}
+.navigation a {
+	display: block;
+	padding: 0.75rem;
+	text-align: left;
+	text-decoration: none;
+	color: rgb(232, 225, 225);
+	font-weight: 700;
+	transition: 0.5s;
+	font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.navigation a:hover, navigation a:active {
+	color: white;
+	background-color: black;
+}
+
+.show li {
+	display: block;
+}
+
+#menu.show::before {
+	content: "X";
+}
+
+/* Media Query for wider than mobile viewports. Breakpoint should be based upon the design and content and use em units to be relative to the user's font size versus fixed with pixels.*/
+@media only screen and (min-width: 40em) {
+	.navigation {
+		display: flex;
+	}
+	.navigation li {
+		display: block; /* change state in small view */
+		flex: 1 1 100%;
+	}
+	.navigation a {
+		text-align: center;
+	}
+	#menu {
+		display: none;
+	}
+}
+
+/* Media Query for wider than mobile viewports. Breakpoint should be based upon the design and content and use em units to be relative to the user's font size versus fixed with pixels.*/
+@media only screen and (min-width: 40em) {
+	.navigation {
+		display: flex;
+	}
+	.navigation li {
+		display: block; /* change state in small view */
+		flex: 1 1 100%;
+	}
+	.navigation a {
+		text-align: center;
+	}
+	#menu {
+		display: none;
+	}
 }
