--- a/lesson03/base.css
+++ b/lesson03/base.css
@@ -1,4 +1,4 @@
-/* Reset some default styles for a clean slate */
+
 body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
@@ -7,21 +7,36 @@ body, h1, h2, h3, p, ul, li {
 /* Set a background color and font styles for the entire page */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #070707;
     color: #333;
 }
 
 /* Style the header section */
+
+.logo:hover{
+    margin-left: 50px;
+    cursor: pointer;
+    background-color: #a09c9c;
+    transform: scale(0.8);
+    transition: all 1s ease;
+    border-radius: 60px;
+
+}
+.container .btn {
+
+}
 header {
-    background-color: #336699;
-    color: #fff;
+    display: flex;
+    background-color: #5a5c61;
+    color: #080808;
     padding: 20px 0;
+
 }
 
-header h1 {
-    font-size: 36px;
-    text-align: center;
-    margin-bottom: 10px;
+nav {
+    margin-left: 300px;
+    margin-top: 50px;
+    font-size: x-large;
 }
 
 nav ul {
@@ -36,16 +51,106 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #fff;
+    color: #252323;
     font-weight: bold;
 }
 
-/* Style the main content sections */
-section {
+img{
+    max-width: auto;
+    border-radius: 2px;
+    padding: 20px;  
+    justify-content: center;
+}
+
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
 }
 
-/* Style the footer section */
+.container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+  }
+/* .card1 {
+    background-color: antiquewhite;
+    width:  600px;
+    height: 400px;
+    margin: 20px
+} */
+
+/* .card2 {
+    background-color: antiquewhite;
+    width:  400px;
+    height: 400px;
+    margin: 20px
+} */
+
+/* .container2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.card {
+    background-color: antiquewhite;
+    width:  400px;
+    height: 200px;
+    margin: 1px
+    border-radius: 15px;
+}
+
+.card-img {
+    padding: 5px;
+    height: 150px;
+    width: 300px;
+    margin: 10px;
+    margin-left: 43px;
+    background-size: cover;
+    background-position: center; 
+    border-radius: 20px;
+}
+
+.card:hover {
+    background-color: #5a5c61;
+    color: #fff;
+    cursor: pointer;
+    transform: scale(1.09);
+    transition: all 1s ease;
+
+}
+
+.car-1 {
+    background-image: url('images/car-1.png')
+}
+/* https://www.scmp.com/magazines/style/tech-design/article/3131549/apple-airtag-do-you-really-need-them-cute-wireless */
+.car-2 {
+    background-image: url('images/car-2.png')
+}
+/* https://www.digitaltrends.com/wp-content/uploads/2022/09/apple-airpods-pro-2-review-00025.jpeg?resize=1200%2C630&p=1 */
+.car-3 {
+    background-image: url('images/car-3.png')
+}
+/* https://images.macrumors.com/t/Wgn-nL6L8OtE6LVkLpHji8ggjtw=/400x0/article-new/2023/10/southern-straps-nylon-band-3.jpg?lossy */
+
+
+
+
+
 footer {
     background-color: #336699;
     color: #fff;
@@ -53,19 +158,4 @@ footer {
     padding: 10px 0;
 }
 
-/* Add specific styles for each page if needed */
-#home {
-    /* Your home page styles here */
-}
 
-#discover {
-    /* Your discover page styles here */
-}
-
-#directory {
-    /* Your directory page styles here */
-}
-
-#join {
-    /* Your join page styles here */
-}
